--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.MainActivity">
+        tools:context=".view.SplashActivity">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -17,10 +17,10 @@
             app:layout_constraintEnd_toEndOf="parent">
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_go_main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Lottery"
-                android:id="@+id/btn_lottery"/>
+                android:text="go_main"/>
 
         </LinearLayout>
 
