--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,13 @@
                 android:text="RandomUser"
                 android:id="@+id/btn_User"/>
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="35dp"
+                android:text="RandomUser"
+                android:id="@+id/btn_test"/>
+
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
